Added :  ` def self.window             $window           end
          def self.window
            $window.document
          end
          `
          in dom.rb to expose neatly the window and document

--- a/examples/integrations/dynamic-rack-opal-sprockets-server/Gemfile
+++ b/examples/integrations/dynamic-rack-opal-sprockets-server/Gemfile
@@ -1,6 +1,7 @@
 source "https://rubygems.org"
-
+gem 'opal'
+gem 'rake', "~> 13.0"
+gem 'puma'
+gem 'rack', '~> 2.2'
 gem "opal-sprockets"
-gem "puma"
-gem "rack"
 gem "opal-browser", path: "../../.."
