--- a/examples/integrations/dynamic-roda-roda-sprockets/Gemfile
+++ b/examples/integrations/dynamic-roda-roda-sprockets/Gemfile
@@ -1,7 +1,8 @@
 source "https://rubygems.org"
-
+gem 'opal'
 gem "opal-sprockets"
 gem "roda-sprockets", ">= 2.0.0a"
-gem "puma"
-gem "rake"
+gem 'rake', "~> 13.0"
+gem 'puma'
+gem 'rack', '~> 2.2'
 gem "opal-browser", path: "../../.."
