--- a/examples/integrations/static-rake-guard/Gemfile
+++ b/examples/integrations/static-rake-guard/Gemfile
@@ -1,6 +1,9 @@
 source "https://rubygems.org"
 
+gem 'opal'
+gem "puma"
+gem 'rake', "~> 13.0"
+gem 'rack', '~> 2.2'
 gem "opal-browser", path: "../../.."
-gem "rake"
 gem "guard"
 gem "guard-rake"
