--- a/examples/integrations/static-rake/Gemfile
+++ b/examples/integrations/static-rake/Gemfile
@@ -1,4 +1,7 @@
 source "https://rubygems.org"
 
+gem 'opal'
+gem "puma"
+gem 'rake', "~> 13.0"
+gem 'rack', '~> 2.2'
 gem "opal-browser", path: "../../.."
-gem "rake"
